--- a/config/samples/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/samples/autoscaling_v1alpha1_hvpa.yaml
@@ -1,8 +1,8 @@
 apiVersion: autoscaling.k8s.io/v1alpha1
 kind: Hvpa
 metadata:
-  annotations:
-    "hpa-controller": "kcm"
+  #annotations:
+  #  "hpa-controller": "kcm"
   labels:
     controller-tools.k8s.io: "1.0"
   name: hvpa-sample
