--- a/kubernetes/70-hvpa-deployment.yaml
+++ b/kubernetes/70-hvpa-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
+  name: hvpa-controller
   namespace: system
 spec:
   replicas: 1
