--- a/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
+++ b/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
@@ -1,20 +1,20 @@
 apiVersion: autoscaling.k8s.io/v1alpha1
 kind: Hvpa
 metadata:
-  # Uncomment below annotation if you want kube-controller-manager to act on HPA's recommendation instead of hvpa-controller
-  #annotations:
-  #  "hpa-controller": "kcm"
+  # Comment below annotation if you want kube-controller-manager to act on HPA's recommendation instead of hvpa-controller
+  annotations:
+    "hpa-controller": "hvpa"
   labels:
     controller-tools.k8s.io: "1.0"
   name: hvpa-sample
 spec:
-  scaleUpDelay: "2m"
-  scaleDownDelay: "3m"
+  scaleUpStabilizationWindow: "2m"
+  scaleDownStabilizationWindow: "3m"
   minCpuChange:
-    value: "20m"
+    value: 20m
     percentage: 80
   minMemChange:
-    value: "100M"
+    value: 100M
     percentage: 80
   hpaTemplate:
     maxReplicas: 3
