--- a/config/samples/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/samples/autoscaling_v1alpha1_hvpa.yaml
@@ -3,6 +3,7 @@ kind: Hvpa
 metadata:
   annotations:
     "hpa-controller": "hvpa"
+    #"enable-vertical-scale-down": "true"
   labels:
     controller-tools.k8s.io: "1.0"
   name: hvpa-sample
@@ -46,7 +47,7 @@ spec:
     - vpaWeight: 0.5
       startReplicaCount: 3
       lastReplicaCount: 5
-    - vpaWeight: 0
+    - vpaWeight: 0.6
       startReplicaCount: 6
       lastReplicaCount: 7
   targetRef:
