--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: eu.gcr.io/gardener-project/gardener/hvpa-controller:0.1.0-dev
+      - image: eu.gcr.io/gardener-project/gardener/hvpa-controller:0.1.0-hpa-v2beta1
         name: manager
