--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,6 +29,10 @@ required = [
   name="k8s.io/autoscaler"
   version="vertical-pod-autoscaler-0.5.1"
 
+[[constraint]]
+  name = "k8s.io/klog"
+  version = "0.3.0"
+
 # STANZAS BELOW ARE GENERATED AND MAY BE WRITTEN - DO NOT MODIFY BELOW THIS LINE.
 
 [[constraint]]
