Override stabilization window for scaling in case there is an OOMkill of pod, or eviction of pod due to node memory pressure.

--- a/config/crds/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/crds/autoscaling_v1alpha1_hvpa.yaml
@@ -197,6 +197,9 @@ spec:
                     vertical:
                       type: string
                   type: object
+                overrideLastScaleTime:
+                  description: Override last scale time
+                  type: boolean
                 vpaWeight:
                   format: float
                   type: number
