Add RBAC rules for all resources

--- a/kubernetes/40-rbac_role.yaml
+++ b/kubernetes/40-rbac_role.yaml
@@ -30,8 +30,16 @@ rules:
   - delete
 - apiGroups:
   - apps
+  - ""
+  - batch
   resources:
+  - pods
   - deployments
+  - jobs
+  - replicationcontrollers
+  - statefulsets
+  - replicasets
+  - daemonsets
   verbs:
   - get
   - list
