--- a/kubernetes/20-hvpa_crd.yaml
+++ b/kubernetes/20-hvpa_crd.yaml
@@ -54,45 +54,91 @@ spec:
                     to which the autoscaler can scale down. It defaults to 1 pod.
                   format: int32
                   type: integer
+                updatePolicy:
+                  description: Describes the rules on how changes are applied. If
+                    not specified, all fields in the `UpdatePolicy` are set to their
+                    default values.
+                  properties:
+                    updateMode:
+                      description: Controls when autoscaler applies changes to the
+                        resources. The default is 'On'.
+                      type: string
+                  type: object
               required:
               - maxReplicas
               type: object
-            minCpuChange:
-              description: MinCpuChange is the minimum change in CPU on which HVPA
-                acts HVPA uses minimum of the Value and Percentage value
+            scaleDownStabilization:
+              description: ScaleDownStabilization defines stabilization parameters
+                after last scaling
               properties:
-                percentage:
-                  description: Percentage is the percentage of currently allocated
-                    value to be used as threshold
-                  format: int32
-                  type: integer
-                value:
-                  description: Value is the absolute value of the threshold
+                duration:
+                  description: Duration defines the minimum delay in minutes between
+                    2 consecutive scale operations Valid time units are "ns", "us"
+                    (or "µs"), "ms", "s", "m", "h"
                   type: string
+                minCpuChange:
+                  description: MinCpuChange is the minimum change in CPU on which
+                    HVPA acts HVPA uses minimum of the Value and Percentage value
+                  properties:
+                    percentage:
+                      description: Percentage is the percentage of currently allocated
+                        value to be used as threshold
+                      format: int32
+                      type: integer
+                    value:
+                      description: Value is the absolute value of the threshold
+                      type: string
+                  type: object
+                minMemChange:
+                  description: MinMemChange is the minimum change in memory on which
+                    HVPA acts HVPA uses minimum of the Value and Percentage value
+                  properties:
+                    percentage:
+                      description: Percentage is the percentage of currently allocated
+                        value to be used as threshold
+                      format: int32
+                      type: integer
+                    value:
+                      description: Value is the absolute value of the threshold
+                      type: string
+                  type: object
               type: object
-            minMemChange:
-              description: MinMemChange is the minimum change in memory on which HVPA
-                acts HVPA uses minimum of the Value and Percentage value
+            scaleUpStabilization:
+              description: ScaleUpStabilization defines stabilization parameters after
+                last scaling
               properties:
-                percentage:
-                  description: Percentage is the percentage of currently allocated
-                    value to be used as threshold
-                  format: int32
-                  type: integer
-                value:
-                  description: Value is the absolute value of the threshold
+                duration:
+                  description: Duration defines the minimum delay in minutes between
+                    2 consecutive scale operations Valid time units are "ns", "us"
+                    (or "µs"), "ms", "s", "m", "h"
                   type: string
+                minCpuChange:
+                  description: MinCpuChange is the minimum change in CPU on which
+                    HVPA acts HVPA uses minimum of the Value and Percentage value
+                  properties:
+                    percentage:
+                      description: Percentage is the percentage of currently allocated
+                        value to be used as threshold
+                      format: int32
+                      type: integer
+                    value:
+                      description: Value is the absolute value of the threshold
+                      type: string
+                  type: object
+                minMemChange:
+                  description: MinMemChange is the minimum change in memory on which
+                    HVPA acts HVPA uses minimum of the Value and Percentage value
+                  properties:
+                    percentage:
+                      description: Percentage is the percentage of currently allocated
+                        value to be used as threshold
+                      format: int32
+                      type: integer
+                    value:
+                      description: Value is the absolute value of the threshold
+                      type: string
+                  type: object
               type: object
-            scaleDownStabilizationWindow:
-              description: ScaleDownStabilizationWindow defines the minimum delay
-                in minutes between 2 consecutive scale down operations Valid time
-                units are "ns", "us" (or "µs"), "ms", "s", "m", "h"
-              type: string
-            scaleUpStabilizationWindow:
-              description: ScaleUpStabilizationWindow defines the minimum delay in
-                minutes between 2 consecutive scale up operations Valid time units
-                are "ns", "us" (or "µs"), "ms", "s", "m", "h"
-              type: string
             targetRef:
               description: TargetRef points to the controller managing the set of
                 pods for the autoscaler to control
@@ -134,6 +180,16 @@ spec:
                         type: object
                       type: array
                   type: object
+                updatePolicy:
+                  description: Describes the rules on how changes are applied. If
+                    not specified, all fields in the `UpdatePolicy` are set to their
+                    default values.
+                  properties:
+                    updateMode:
+                      description: Controls when autoscaler applies changes to the
+                        resources. The default is 'On'.
+                      type: string
+                  type: object
               type: object
             weightBasedScalingIntervals:
               description: WeightBasedScalingIntervals defines the intervals of replica
@@ -167,9 +223,7 @@ spec:
         status:
           properties:
             hpaStatus:
-              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                of cluster Important: Run "make" to regenerate code after modifying
-                this file current information about the HPA.'
+              description: Current recommendations from HVPA for horizontal scaling.
               properties:
                 currentReplicas:
                   format: int32
@@ -178,31 +232,50 @@ spec:
                   format: int32
                   type: integer
               type: object
-            hvpaCurrentStatus:
-              description: Current information about HVPA.
+            hpaUpdatePolicy:
+              description: Current HPA UpdatePolicy set in the spec
               properties:
-                hpaWeight:
-                  format: float
-                  type: number
-                lastScaleTime:
-                  description: last time the HVPA scaled the resource; used by the
-                    autoscaler to control how often the scaling is done.
+                updateMode:
+                  description: Controls when autoscaler applies changes to the resources.
+                    The default is 'On'.
+                  type: string
+              type: object
+            hpaWeight:
+              format: float
+              type: number
+            lastError:
+              description: LastError has details of any errors that occured
+              properties:
+                description:
+                  description: Description of the error
+                  type: string
+                lastOperation:
+                  description: LastOperation is the type of operation for which error
+                    occurred
+                  type: string
+                lastUpdateTime:
+                  description: Time at which the error occurred
                   format: date-time
                   type: string
-                lastScaleType:
-                  description: the kind of scaling that was done last time
-                  properties:
-                    horizontal:
-                      type: string
-                    vertical:
-                      type: string
-                  type: object
-                vpaWeight:
-                  format: float
-                  type: number
               type: object
+            lastScaleTime:
+              description: last time the HVPA scaled the resource; used by the autoscaler
+                to control how often the scaling is done.
+              format: date-time
+              type: string
+            lastScaleType:
+              description: the kind of scaling that was done last time
+              properties:
+                horizontal:
+                  type: string
+                vertical:
+                  type: string
+              type: object
+            overrideScaleUpStabilization:
+              description: Override scale up stabilization window
+              type: boolean
             vpaStatus:
-              description: Current information about the VPA.
+              description: Current recommendations from HVPA for vertical scaling.
               properties:
                 conditions:
                   description: Conditions is the set of conditions required for this
@@ -282,6 +355,17 @@ spec:
                       type: array
                   type: object
               type: object
+            vpaUpdatePolicy:
+              description: Current VPA UpdatePolicy set in the spec
+              properties:
+                updateMode:
+                  description: Controls when autoscaler applies changes to the resources.
+                    The default is 'On'.
+                  type: string
+              type: object
+            vpaWeight:
+              format: float
+              type: number
           type: object
   version: v1alpha1
 status:
