Small fix in .ci/build was needed as paths changed after migration to kubebuilder v2

--- a/.ci/build
+++ b/.ci/build
@@ -65,12 +65,12 @@ if [[ -z "$LOCAL_BUILD" ]]; then
     -a \
     -v \
     -o ${BINARY_PATH}/linux-amd64/manager \
-    github.com/gardener/hvpa-controller/cmd/manager
+    main.go
 
 # If the LOCAL_BUILD environment variable is set, we simply run `go build`.
 else
   go build \
     -v \
     -o ${BINARY_PATH}/manager \
-    github.com/gardener/hvpa-controller/cmd/manager
+    main.go
 fi
