--- a/.ci/build
+++ b/.ci/build
@@ -61,16 +61,18 @@ GIT_SHA=$(git rev-parse --short HEAD || echo "GitNotFound")
 # If no LOCAL_BUILD environment variable is set, we configure the `go build` command
 # to build for linux OS, amd64 architectures and without CGO enablement.
 if [[ -z "$LOCAL_BUILD" ]]; then
-  CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+  CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build \
     -a \
     -v \
+    -mod=vendor \
     -o ${BINARY_PATH}/linux-amd64/manager \
     main.go
 
 # If the LOCAL_BUILD environment variable is set, we simply run `go build`.
 else
-  go build \
+  GO111MODULE=on go build \
     -v \
+    -mod=vendor \
     -o ${BINARY_PATH}/manager \
     main.go
 fi
