--- a/config/samples/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/samples/autoscaling_v1alpha1_hvpa.yaml
@@ -26,7 +26,9 @@ spec:
       percentage: 80
   hpa:
     template:
-      creationTimestamp: null
+      metadata:
+        labels:
+          key1: value1
       spec:
         maxReplicas: 3
         minReplicas: 1
@@ -47,7 +49,9 @@ spec:
       updateMode: ScaleUp
   vpa:
     template:
-      creationTimestamp: null
+      metadata:
+        labels:
+          key2: value2
       spec:
         resourcePolicy:
           containerPolicies:
