Changing HPA version from v2beta2 to v2beta1

--- a/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
+++ b/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
@@ -34,18 +34,14 @@ spec:
         maxReplicas: 3
         minReplicas: 1
         metrics:
-          - resource:
-              name: memory
-              target:
-                averageUtilization: 70
-                type: Utilization
-            type: Resource
-          - resource:
-              name: cpu
-              target:
-                averageUtilization: 60
-                type: Utilization
-            type: Resource
+        - resource:
+            name: memory
+            targetAverageUtilization: 70
+          type: Resource
+        - resource:
+            name: cpu
+            targetAverageUtilization: 60
+          type: Resource
     updatePolicy:
       updateMode: "Auto"
   vpa:
