--- a/config/samples/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/samples/autoscaling_v1alpha1_hvpa.yaml
@@ -49,6 +49,13 @@ spec:
     selector:
       matchLabels:
         key2: value2
+    limitsScaleParams:
+      cpu:
+        percentage: 80
+        value: "2"
+      memory:
+        percentage: 80
+        value: 3G
     template:
       metadata:
         labels:
