--- a/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
+++ b/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
@@ -48,6 +48,13 @@ spec:
     selector:
       matchLabels:
         key2: value2
+    limitsScaleParams:
+      cpu:
+        percentage: 80
+        value: "2"
+      memory:
+        percentage: 80
+        value: 3G
     template:
       metadata:
         labels:
