--- a/config/samples/autoscaling_v1alpha1_hvpa.yaml
+++ b/config/samples/autoscaling_v1alpha1_hvpa.yaml
@@ -49,7 +49,7 @@ spec:
     selector:
       matchLabels:
         key2: value2
-    limitsScaleParams:
+    limitsRequestsGapScaleParams:
       cpu:
         percentage: 80
         value: "2"
