--- a/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
+++ b/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
@@ -5,27 +5,24 @@ metadata:
   annotations:
     "hpa-controller": "hvpa"
   name: hvpa-sample
+  namespace: default
 spec:
-  scaleUpStabilization:
-    duration: "2m"
-    minCpuChange:
-      value: 20m
-      percentage: 80
-    minMemChange:
-      value: 100M
-      percentage: 80
-  scaleDownStabilization:
-    duration: "3m"
-    minCpuChange:
-      value: 20m
-      percentage: 80
-    minMemChange:
-      value: 100M
-      percentage: 80
+  maintenanceWindow:
+    begin: "220000-0000"
+    end:  "230000-0000"
   hpa:
     selector:
       matchLabels:
         key1: value1
+    deploy: true
+    scaleUp:
+      updatePolicy:
+        updateMode: "Auto"
+      stabilizationDuration: "3m"
+    scaleDown:
+      updatePolicy:
+        updateMode: "Auto"
+      stabilizationDuration: "3m"
     template:
       metadata:
         labels:
@@ -42,12 +39,33 @@ spec:
             name: cpu
             targetAverageUtilization: 60
           type: Resource
-    updatePolicy:
-      updateMode: "Auto"
   vpa:
     selector:
       matchLabels:
         key2: value2
+    deploy: true
+    scaleUp:
+      updatePolicy:
+        updateMode: "Auto"
+      stabilizationDuration: "3m"
+      minChange:
+        cpu:
+          value: "3"
+          percentage: 80
+        memory:
+          value: "3"
+          percentage: 80
+    scaleDown:
+      updatePolicy:
+        updateMode: "MaintenanceWindow"
+      stabilizationDuration: "3m"
+      minChange:
+        cpu:
+          value: "3"
+          percentage: 80
+        memory:
+          value: "3"
+          percentage: 80
     limitsRequestsGapScaleParams:
       cpu:
         percentage: 80
@@ -67,8 +85,6 @@ spec:
                 memory: 3000Mi
               minAllowed:
                 memory: 400Mi
-    updatePolicy:
-      updateMode: "scaleUp"
   weightBasedScalingIntervals:
     - vpaWeight: 0
       startReplicaCount: 1
