Enhance hvpa controller logs to include details about the reconciling object

--- a/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
+++ b/kubernetes/80-autoscaling_v1alpha1_hvpa.yaml
@@ -7,7 +7,7 @@ metadata:
   name: hvpa-sample
   namespace: default
 spec:
-  maintenanceWindow:
+  maintenanceTimeWindow:
     begin: "220000-0000"
     end:  "230000-0000"
   hpa:
