--- a/config/crd/patches/webhook_in_hvpas.yaml
+++ b/config/crd/patches/webhook_in_hvpas.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: hvpas.autoscaling.k8s.io
+  name: hvpas.autoscaling.gardener.cloud
 spec:
   conversion:
     strategy: Webhook
