--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -63,7 +63,7 @@ rules:
   - update
   - patch
 - apiGroups:
-  - autoscaling.k8s.io
+  - autoscaling.gardener.cloud
   resources:
   - hvpas
   verbs:
@@ -75,7 +75,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - autoscaling.k8s.io
+  - autoscaling.gardener.cloud
   resources:
   - hvpas/status
   verbs:
