--- a/config/crd/patches/cainjection_in_hvpas.yaml
+++ b/config/crd/patches/cainjection_in_hvpas.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     certmanager.k8s.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: hvpas.autoscaling.k8s.io
+  name: hvpas.autoscaling.gardener.cloud
