--- a/config/crd/integration_test/vpaext.yaml
+++ b/config/crd/integration_test/vpaext.yaml
@@ -18,5 +18,8 @@ spec:
     storage: false
   - name: v1beta2
     served: true
+    storage: false
+  - name: v1
+    served: true
     storage: true
 
