--- a/config/crd/output/crds.yaml
+++ b/config/crd/output/crds.yaml
@@ -4,7 +4,6 @@ metadata:
   annotations:
     api-approved.kubernetes.io: unapproved, temporarily squatting
     controller-gen.kubebuilder.io/version: v0.4.0
-  creationTimestamp: null
   name: hvpas.autoscaling.k8s.io
 spec:
   group: autoscaling.k8s.io
@@ -851,6 +850,20 @@ spec:
                                       description: Name of the container or DefaultContainerResourcePolicy,
                                         in which case the policy is used by the containers
                                         that don't have their own policy specified.
+                                      type: string
+                                    controlledResources:
+                                      description: Specifies the type of recommendations
+                                        that will be computed (and possibly applied)
+                                        by VPA. If not specified, the default of [ResourceCPU,
+                                        ResourceMemory] will be used.
+                                      items:
+                                        description: ResourceName is the name identifying
+                                          various resources in a ResourceList.
+                                        type: string
+                                      type: array
+                                    controlledValues:
+                                      description: Specifies which resource values
+                                        should be controlled. The default is "RequestsAndLimits".
                                       type: string
                                     maxAllowed:
                                       additionalProperties:
